[package]
name = "aco_impl_ex1"
version = "0.1.0"
authors = ["Rodrigo Alvite Romano <rovite@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde-pickle = "0.6.2"
nalgebra = "0.26.1"
#nalgebra-sparse = "0.2"
osqp = "0.6.2"