[package]
name = "aco_loop_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dosio = "0.1.3"
nalgebra = "0.30.1"
osqp = "0.6.2"
serde = { version = "1.0.130", features = ["derive"] }
serde-pickle = "1.1.0"
